<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navdraw_view_title"
        android:title="@string/navdraw_view_title">
        <menu>
            <item
                android:id="@+id/section_view_ring"
                android:icon="@drawable/ring"
                android:title="@string/navdraw_view_ring"
                android:checkable="true"/>
            <item
                android:id="@+id/section_view_rect"
                android:icon="@drawable/rect"
                android:title="@string/navdraw_view_rect"
                android:checkable="true"/>
            <item
                android:id="@+id/section_view_calendar"
                android:icon="@drawable/calendar"
                android:title="@string/navdraw_view_calendar"
                android:checkable="true"/>
            <item
                android:id="@+id/section_view_schedule"
                android:icon="@drawable/schedule"
                android:title="@string/navdraw_view_schedule"
                android:checkable="true"/>
        </menu>
    </item>
    <item
        android:id="@+id/navdraw_misc_title"
        android:title="@string/navdraw_misc_title">
        <menu>
            <item
                android:id="@+id/section_misc_settings"
                android:icon="@drawable/settings"
                android:title="@string/navdraw_misc_settings"
                android:checkable="true"/>
            <item
                android:id="@+id/section_misc_about"
                android:icon="@drawable/about"
                android:title="@string/navdraw_misc_about"
                android:checkable="true"/>
        </menu>
    </item>
</menu>