<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="@dimen/veryBigMargin"
        android:src="@mipmap/ic_launcher"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="@dimen/bigMargin"
        android:text="@string/app_name"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textColor="?attr/text"
        android:layout_marginTop="@dimen/mainMargin"
        android:text="@string/about_author"
        android:textSize="@dimen/mainTextSize"/>

    <TextView
        android:id="@+id/site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author"
        android:textColor="?attr/text"
        android:layout_marginTop="@dimen/mainMargin"
        android:text="@string/about_site"
        android:textSize="@dimen/mainTextSize"
        android:autoLink="web"
        android:onClick="linkClick"/>

    <TextView
        android:id="@+id/privacy_policy_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/site"
        android:textColor="?attr/text"
        android:layout_marginTop="@dimen/veryBigMargin"
        android:text="@string/about_privacy_policy_title"
        android:textSize="@dimen/mainTextSize"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privacy_policy_title"
        android:textColor="?attr/text"
        android:paddingStart="@dimen/veryBigMargin"
        android:paddingEnd="@dimen/veryBigMargin"
        android:layout_marginTop="@dimen/mainMargin"
        android:lineSpacingExtra="4dp"
        android:text="@string/about_privacy_policy"
        android:textSize="@dimen/mainTextSize"
        android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>